--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
 <resources>
     <dimen name="margin">16dp</dimen>
     <dimen name="icon_size">64dp</dimen>
+    <dimen name="details_icon_size">128dp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="triple_margin">48dp</dimen>
 </resources>
